# FedLearning_testbed

./: client.py  global_evaluation_rewards.txt  main.py  model.py  pyproject.toml
ppo_fed_rl/: README.md
ppo_fed_rl/myapp/: client.py  model.py  pyproject.toml  server.py
