# pyproject.toml  (flwr >= 1.32 app format)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myapp"
version = "1.0.0"
description = "Federated PPO RL testbed with Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.32.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
]

[tool.flwr.app]
publisher = "rac-mdf-ornl"

[tool.flwr.app.components]
serverapp = "myapp.server:app"
clientapp = "myapp.client:app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 1
lr = 1e-3
device = "cpu"

# Simulation federation — run with: flwr run . local-simulation
[tool.flwr.federations.local-simulation]
address = "0.0.0.0:9093"
options.num-supernodes = 2
