[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myapp"
version = "1.0.0"
description = "Federated PPO RL testbed using Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.32.0",
    "numpy>=2.0.2",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
]

# Tells hatchling to package the `myapp/` directory as a Python package
# so that `pip install -e .` makes `import myapp` (and relative imports) work.
[tool.hatch.build.targets.wheel]
packages = ["myapp"]

[tool.flwr.app]
publisher = "rac-mdf-ornl"
fab-format-version = 1
flwr-version-target = ">=1.32.0"

[tool.flwr.app.components]
serverapp = "myapp.server:app"
clientapp = "myapp.client:app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 1
lr = 1e-3
device = "cpu"
